# sad_machine

./: Cargo.toml  README.md
examples/game-loop/: main.rs
sad_machine/: Cargo.toml
sad_machine/examples/lock/: main.rs
sad_machine/src/: lib.rs  machine.rs  state.rs  state_transition.rs  transition.rs
sm/benches/: sm.rs
sm_macro/: Cargo.toml
sm_macro/src/: lib.rs
sm_macro/src/sm/: event.rs  initial_state.rs  machine.rs  mod.rs  state.rs  state_transition.rs  transition.rs
src/: event.rs  initial_state.rs  state_transition.rs  transition.rs
