[package]
name = "sad_machine"
version = "1.0.0"
authors = [
    "steinuil <steenuil.owl@gmail.com>",
    "Jean Mertz <helloworld@rustic.games>",
]
license = "MIT OR Apache-2.0"
description = "Sad Machine - a static State Machine macro"
repository = "https://github.com/steinuil/sad_machine"
keywords = ["fsm", "state", "state-machine"]
categories = [
    "game-engines",
    "no-std",
    "simulation",
    "science",
    "visualization",
]
edition = "2018"

[dependencies]
convert_case = "0.4"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

[lib]
proc-macro = true
