[package]
name = "sad_machine"
version = "0.10.0"
authors = ["Jean Mertz <helloworld@rustic.games>"]
license = "MIT OR Apache-2.0"
description = "💋 SM – a static State Machine macro"
repository = "https://github.com/steinuil/sad_machine"
keywords = ["fsm", "state", "state-machine"]
categories = [
    "game-engines",
    "no-std",
    "simulation",
    "science",
    "visualization",
]
edition = "2018"

[dependencies]
convert_case = "0.4"
proc-macro2 = "0.4"
quote = "0.6"
syn = "0.15"

[lib]
proc-macro = true
